--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-i
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>travel</title>
+    <link rel="stylesheet" href="/assets/fonts/pretendardvariable.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+  </head>
+
+  <body>
+    <div class="title">
+        <h1>여행 기록<br/>Travel Journal</h1>
+    </div>
+    <div class="grid">
+      <div class="card" style="color: lightgreen; background-color: navy;">
+        <div class="card-name">중국 범정산<br/>Fanjingshan</div>
+        <div class="upcoming">예정</div>
+      </div>
+      <a href="/media/pages/Pak Lap Wan/pak lap wan.html">
+        <div class="card" style="color: lemonchiffon; background-color: darkgreen;">
+            <div class="card-name">홍콩 팍랍완<br/>Pak Lap Wan</div>
+        </div>
+      </a>
+      <a href="/media/pages/Sapa/Sapa.html">
+        <div class="card" style="color: greenyellow; background-color: darkgray;">
+            <div class="card-name">베트남 사파<br/>Sa Pa</div>
+        </div>
+      </a>
+        <div class="card" style="color: indianred; background-color: lavenderblush;">
+            <div class="card-name">중국 광저우<br/>Guangzhou</div>
+        </div>
+        <div class="card" style="color: indianred; background-color: lavenderblush;">
+          <div class="card-name"><br/></div>
+        </div>        <div class="card" style="color: indianred; background-color: lavenderblush;">
+          <div class="card-name"><br/></div>
+        </div>        <div class="card" style="color: indianred; background-color: lavenderblush;">
+          <div class="card-name"><br/></div>
+        </div>        <div class="card" style="color: indianred; background-color: lavenderblush;">
+          <div class="card-name"><br/></div>
+        </div>
+        <div class="card" style="color: indianred; background-color: lavenderblush;">
+          <div class="card-name"><br/></div>
+        </div>
+        <div class="card" style="color: indianred; background-color: lavenderblush;">
+          <div class="card-name"><br/></div>
+        </div>
+    </div>
+  </body>
+</html>
